# conda-recipes-rios-channel

arcsi/: meta.yaml
envmaster/: bld.bat  build.sh  meta.yaml
gdalaoi/: bld.bat  build.sh  meta.yaml
gdalaoi/scripts/: activate.bat  activate.sh  deactivate.bat  deactivate.sh
gdalcacaview/: bld.bat  build.sh  meta.yaml
lastools/: CMakeLists.patch  bld.bat  build.sh  makedef.py.patch  meta.yaml  mydefs.hpp.patch  mydefs.patch  sharedlib.patch  stdext.patch  stdext2.patch  vc_makefile.patch
lcrimageutils/: bld.bat  build.sh  meta.yaml
libcaca/: CMakeLists.txt.patch  bld.bat  build.sh  config.h.patch  meta.yaml
mapaccuracy/: meta.yaml  nocmdline.patch
natgrid/: meta.yaml
ne/: build.sh  meta.yaml  ncurses.patch
pulsewaves/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  pulsefilter.cpp.patch  pulsetransform.cpp.patch  pulsewaves_dll.h.patch
py6s/: meta.yaml
pyeq3/: build.sh  meta.yaml
pylidar/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
pynninterp/: meta.yaml
pysolar/: meta.yaml
python-fmask/: meta.yaml
riegl_tools/: bld.bat  meta.yaml
rios/: meta.yaml
rsgislib/: bld.bat  build.sh  meta.yaml  run_test.py
sixs/: bld.bat  build.sh  meta.yaml  run_test.bat
spd3dpointsviewer/: bld.bat  build.sh  meta.yaml
spdlib/: bld.bat  build.sh  cmake_liblaslib.patch  meta.yaml
tuiview/: meta.yaml
tuiview-plugins/: meta.yaml  nocmdline.patch
zunzunsite/: build.sh  meta.yaml  settings.patch  startzunzun.patch
